# circles

./: CMakeLists.txt  README.md
include/: circle.h  graphicscircleitem.h  interactingcircle.h  interactingcirclelist.h  interactingcirclescene.h  typedefs.h  utils.h  widget.h
src/: CMakeLists.txt  circle.cpp  graphicscircleitem.cpp  interactingcircle.cpp  interactingcirclelist.cpp  interactingcirclescene.cpp  main.cpp  widget.cpp
test/: CMakeLists.txt  main.cpp  testcircles.cpp
